--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,10 +1,184 @@
-body {
-    background-color: powderblue;
-    }#
-    addStudentButton {
-    color: blue;
-    }.
-    student {
-    color: rgb(255, 0, 0);
-    border: 5px solid black;
-    }
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+    font-family: 'Fira sans', sans-serif;
+}
+
+.background {
+    /* background-color: #023438; */
+    background-color: rgba(3, 75, 53, 0.445);
+    /* background-image: linear-gradient(to bottom right, #a6b8c7 10%, #102040) */
+}
+
+body div.body-element{
+    display:  flex;
+    justify-content: center;
+    align-items: center;
+}
+
+body .form{
+    /* background-color: #2f4969; */
+    /* background-image: linear-gradient(to bottom right, #2f4960 10%, #102040); */
+    display:  flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 10vh; /*Adjusting height fixed issue when there is background image*/
+    width: 100%;
+}
+
+.login {
+    display:  flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+}
+
+/* .home {
+    display:  flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    width: 100%;
+    max-width: 400px;
+    padding: 50px 30px;
+    background-color: blanchedalmond;
+    border-radius: 16px;
+    text-align: center;
+    justify-items: center;
+} */
+
+form {
+    display: block;
+    width: 100%;
+    max-width: 400px;
+    padding: 50px 30px;
+    background-image: linear-gradient(to bottom, #072e31,  #0c2553);
+    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
+    border-radius: 16px;
+}
+
+form.empty{
+    background: none;
+}
+
+form h1 {
+    color: #fff;
+    font-size: 36px;
+    text-transform: uppercase;
+    margin-bottom: 30px;
+}
+
+.err-msg {
+    padding: 10px 15px;
+    background-color: #072e31;
+    /* background-image: linear-gradient(to bottom, #072e31,  #0c2553); */
+    border-radius: 8px;
+    margin-bottom: 15px;
+    color: red;
+    /* box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2); */
+}
+
+form .form-group {
+     margin-bottom: 30px;
+}
+
+form label {
+    display: block;
+    color: #eee;
+    font-size:  14px;
+    margin-bottom: 5px;
+}
+
+body label {
+    display: block;
+    color: #eee;
+    font-size:  14px;
+    
+}
+
+form input {
+    appearance: none;
+    background: none;
+    outline: none;
+    border: none;
+}
+
+.clear{
+    appearance: none;
+    background: none;
+    outline: none;
+    border: none;
+}
+
+form input:not([type="submit"]) {
+    display: block;
+    width: 100%;
+    padding: 15px;
+    border-radius: 8px;
+    background-color: rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.2);
+    transition: 0.4s;
+    color: #222;
+    font-size: 15px;
+    font-weight: 300;
+}
+
+body input.clear {
+    display: block;
+    width: 15%;
+    padding: 15px;
+    border-radius: 8px;
+    background-color: rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.2);
+    transition: 0.4s;
+    color: #222;
+    font-size: 15px;
+    font-weight: 300;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 50px;
+    text-align: center;
+}
+
+body div.center
+{
+    display:  flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+form input:not([type="submit"])::placeholder {
+    color: #ccc;
+}
+
+body input:not([type="submit"])::placeholder {
+    color: #ccc;
+}
+
+form input:not([type="submit"]):focus, form input:not([type="submit"]):valid {
+    background-color: #fff;
+    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
+}
+
+body input:not([type="submit"]):focus, form input:not([type="submit"]):valid {
+    background-color: #fff;
+    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
+}
+
+form input[type="submit"] {
+    display: block;
+    width: 100%;
+    padding: 15px;
+    border-radius: 8px;
+    background-color: #2f4960;
+    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.2);
+    transition: 0.4s;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 700;
+    cursor: pointer;
+}
