--- a/views/lobby.ejs
+++ b/views/lobby.ejs
@@ -8,24 +8,37 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="cdn/css/main.css">
 </head>
-<body background="cdn/images/home.png">
-<div class= "jumbotron text-center bg-dark text-white"> 
-    <h1>WELCOME To The Greatest APP EVER!</h1>
-    <p>No really, it's awesome ;-)</p>
-</div>  <!-- sends form content to certain method in route, node file -->
-<div class="col-md-12 text-center">
+<body background="cdn/images/home.png" onload="myFunction()">
 
-    <a href="/login" class="btn btn-dark" role="button">Log In</a>
-    <a href="/signup" class="btn btn-dark" role="button">Sign-Up</a>
-    </div>
-    <div class="button">
-    <!-- <signup></signup> -->
-    </div>
+<div class= "jumbotron text-center bg-dark text-white"> 
+    <h1>LOBBY</h1>
+    <p>;-)</p>
+</div>
+
+<div>
+    <h1>
+        <% if (identifier) { %>
+            <h2><%= identifier %></h2>
+        <% } %>
+        <% if (notification) { %>
+            <h3><%= notification%></h3>
+        <% } %>
     
+    </h1>
+</div>
+
+<div class = "form">
     <form action="/logout?_method=DELETE" method="post"> <!--Decide on weither to put logout here or in lobby-->
       <div>
           <input type= "submit" value="Log Out" />
       </div>
 </form>
+</div>
 </body>
+
+<script>
+    function myFunction() {
+    }
+</script>
